--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "axios": "^0.19",
         "bootstrap": "^4.5.2",
+        "bootswatch": "^4.5.2",
         "bootswatch-scss": "3.2.0",
         "cross-env": "^7.0",
         "font-awesome": "^4.7.0",
@@ -20,7 +21,6 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.26.10",
         "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.6.12",
-        "bootswatch": "^4.5.2"
+        "vue-template-compiler": "^2.6.12"
     }
 }
