--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
         "axios": "^0.19",
         "bootstrap": "^4.5.2",
         "bootswatch": "^4.5.2",
-        "bootswatch-scss": "3.2.0",
         "cross-env": "^7.0",
         "font-awesome": "^4.7.0",
+        "jquery": "^3.5.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
+        "popper.js": "^1.12",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.26.10",
         "sass-loader": "^8.0.0",
