--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.26.10",
         "sass-loader": "^8.0.0",
-        "vue-template-compiler": "^2.6.12"
+        "vue-template-compiler": "^2.6.12",
+        "filesize": "^6.1.0"
     }
 }
